Update Mixin